Combine legacy monster loot with concrete RPG items, sets and weapon abilities